[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/popup_finishedItem.gd" type="Script" id=1]

[node name="finishedItem_dialog" type="AcceptDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 630.0
margin_right = 420.0
margin_bottom = 800.0
rect_min_size = Vector2( 330, 170 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Item complete!"
resizable = false
dialog_text = "You crafted this item!"
dialog_hide_on_ok = true
script = ExtResource( 1 )
_sections_unfolded = [ "Dialog", "Rect" ]

[node name="elements" type="Node2D" parent="." index="3"]

[node name="sprite_icon" type="Sprite" parent="elements" index="0"]

position = Vector2( 160, 50 )

[node name="field_itemName" type="Label" parent="elements" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 330.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#ITEM NAME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_skillUp" type="Label" parent="elements" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.132813, 0.959351, 1, 1 )
text = "#CHARNAME BETTER AT SKILL"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[connection signal="confirmed" from="." to="." method="_on_finishedItem_dialog_confirmed"]


